[tool.poetry]
name = "bluesky-dispatcher"
version = "0.1.0"
description = "websocket enabled dispatcher for bluesky plans"
authors = ["Alex Palma <alexp@ansto.gov.au>"]

[tool.poetry.dependencies]
python = "^3.7"
bluesky = "1.5.5"
ophyd = "1.3.3"
websockets = "8.1"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
